--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="title_dashboard">Search</string>
     <string name="title_notifications">Add</string>
     <string name="title_rank">Rank</string>
+    <string name="title_signup">Sign up</string>
 </resources>
